# async-console-game

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
async-console-game/: canvas.py
game/: __main__.py  animation.py  canvas.py  engine.py  helpers.py  obstacles.py  physics.py
game/frames/: explosion_1  explosion_2  explosion_3  explosion_4  gameover
