[tool.poetry]
name = "async-console-game"
version = "0.1.0"
description = ""
authors = ["Nick Lazarenko <82189469+nicklazarenko@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
