[tool.poetry]
name = "spaceship-game"
version = "1.0.0"
description = "Async console game"
authors = ["Nick Lazarenko <82189469+nicklazarenko@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "game" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spaceship-game = "game.engine:main"
